--- a/_posts/2018-03-13-토비의 스프링 - 2장 테스트.md
+++ b/_posts/2018-03-13-토비의 스프링 - 2장 테스트.md
@@ -265,3 +265,208 @@ assertThat(dao.getCount(), is(3));
 
 주의해야 할 점은 JUnit이 테스트의 실행 순서를 보장해주지 않는다는 것이다. 테스트의 결과가 테스트 실행 순서에 영향을 받는다면 테스트를 잘못 만든 것이다.
 
+### addAndGet() 테스트 보완
+현재 테스트는 add() 후에 레코드 개수도 확인하고, get으로 읽어와서 값도 모두 비교하고 있다. 그러나 id를 조건으로 하여 사용자를 검색하는 테스트는 충분히 검증된 거 같지 않다.
+그래서 get() 메서드에 대한 테스트 기능을 보완하려고 한다.
+
+1. User를 하나 더 추가하여 두 개의 User를 add() 하고, 각 User의 id를 파라미터로 전달하여 get을 실행시킨다.
+2. 주어진 id 에 해당하는 정확한 User 정보를 가져오는지 확인한다.
+
+~~~java
+@Test
+public void addAndGet() throws SQLException {
+    
+    UserDao dao = context.getBean("userDao", UserDao.class);
+    User user1 = new User("gyumee", "백성철", "springno1");
+    User user2 = new User("leegw700", "이길원", "springno2");
+    
+    dao.deleteAll();
+    assertThat(dao.getCount(), is(0));
+    
+    dao.add(user1);
+    dao.add(user2);
+    assertThat(dao.getCount(), is(2));
+    
+    User userget1 = dao.get(user1.getId());
+    assertThat(userget1.getName(), is(user1.getName()));
+    assertThat(userget1.getPassword(), is(user1.getPassword()));
+    
+    User userget2 = dao.get(user2.getId());
+    assertThat(userget2.getName(), is(user2.getName()));
+    assertThat(userget2.getPassword(), is(user2.getPassword()));
+}
+~~~
+
+위와 같이 테스트를 추가하면 get() 메서드의 동작을 검증할 수 있다.
+
+### get() 예외조건에 대한 테스트
+get 메서드에 전달한 id 에 해당하는 사용자 정보가 없는 경우에는 어떻게 될까? 이 경우는 고려해보지 않았다. 두 가지 방법이 있을 것이다.
+
+1. null과 같은 특별한 값을 리턴한다.
+2. id에 해당하는 정보를 찾을 수 없다고 예외를 던진다.
+
+여기서는 후자의 방법을 사용한다.
+
+~~~java
+@Test(expected=EmptyResultDataAccessException.class)
+public void getUserFailure() throws SQLException {
+    // ...
+    
+    UserDao dao = context.getBean("userDao", UserDao.class);
+    
+    dao.deleteAll();
+    assertThat(dao.getCount(), is(0)); 
+
+    dao.get("unknown_id"); // 이 메서드 실행 중에 예외가 발생한다.
+}
+~~~
+
+JUnit은 다음과 같은 방법으로 예외 발생 테스트를 할 수 있다. @Test에 ecpected를 지정해 두면 정상적으로 테스트를 종료한 경우 테스트가 실패하고, 지정한 예외가 던져지면 테스트가 성공한다.
+
+### 포괄적인 테스트
+실제로 테스트를 만들다 보면, 개발자는 다음과 같은 실수를 많이 한다.
+
+> 개발자가 테스트를 직접 만들 때 자주 하는 실수가 하나 있다. 바로 성공하는 테스트만 골라서 만드는 것이다.
+
+> 스프링의 창시자인 로드 존슨은 "항상 실패하는 테스트를 먼저 만들라"는 조언을 했다.
+
+테스트를 작성할 때는 부정적인 케이스를 먼저 만드는 습관을 들이는 게 좋다.
+
+## 테스트 코드 개선
+지금까지 만든 테스트 코드를 리펙토링 해 보자. 테스트 코드 또한 필요하다면 내부 구조와 설계를 개선하여 좀 더 깔끔하고 이해하기 쉬우며 변경이 용이한 코드로 만들 필요가 있다.
+
+다음의 코드는 테스트에서 기계적으로 반복된다.
+
+~~~java
+ApplicationContext context = new ClassPathXmlApplicationContext("applicationContext.xml");
+UserDao dao = context.getBean("userDao", UserDao.class);
+~~~
+
+중복된 코드는 별도의 메소드로 extract 하면 좋다. JUnit에서는 이런 코드를 추출하기 위해 @Before라는 애노테이션을 제공한다.
+JUnit은 다음과 같은 프로세스로 테스트 케이스를 수행한다.
+
+1. 테스트 클래스에서 @Test가 붙은 public이고 void 형이며 파라미터가 없는 테스트 메소드를 찾는다.
+2. 테스트 클래스의 오브젝트를 하나 만든다.
+3. @Before가 붙은 메소드가 있다면 실행시킨다.
+4. @Test가 붙은 메소드를 하나 호출하고 테스트 결과를 저장해둔다.
+5. @After가 붙은 메소드가 있다면 실행한다.
+6. 나머지 테스트 메소드에 대해 2~5번을 반복한다.
+7. 모든 테스트의 결과를 종합하여 돌려준다.
+
+그렇기 때문에, @Before 어노테이션에 위의 코드를 넣고 context와 dao를 인스턴스 변수로 분리하면 모든 테스트 메서드에서 동일하게 활용할 수 있다.
+
+~~~java
+public class UserDaoTest {
+    private UserDao dao;
+    
+    @Before
+    public void setUp() {
+        ApplicationContext context = new GenericXmlApplicationContext("applicationContext.xml");
+        this.dao = context.getBean("userDao", UserDao.class);
+    }
+    
+    // ...
+}
+~~~
+
+또 한가지 기억해야 할 사항은, 테스트 메소드를 실행할 때마다 테스트 클래스와 오브젝트를 새로 만든다는 점이다. 각각 테스트가 서로 영향을 미치지 않고 독립적으로 동작하게 하기 위함이다.
+
+### 픽스쳐
+테스트를 수행하는 데 필요한 정보나 오브젝트를 픽스쳐라고 한다. UserDaoTest에서는 dao가 대표적인 픽스쳐일 것이고, add 메소드에 전달하는 User 객체도 픽스쳐라고 할 수 있다.
+
+이 부분도 중복이 있으므로 @Before로 추출해 보자.
+
+~~~java
+public class UserDaoTest {
+    private UserDao dao;
+    private User user1;
+    private User user2;
+    private User user3;
+    
+    @Before
+    public void setUp() {
+        this.user1 = new User("gyumee", "박성철", "springno1");
+        this.user2 = new User("leegw700", "이길원", "springno2");
+        this.user2 = new User("bumjin", "박범진", "springno3");
+    }
+}
+~~~
+
+# 스프링 테스트 적용
+어느 정도 테스트 케이스를 정리하였지만, 한가지 찝찝한 점이 있다. @Before 메소드가 테스트 메소드의 횟수만큼 실행되기 때문에, 애플리케이션 컨텍스트가 총 세번 만들어진다.
+애플리케이션 컨텍스트가 복잡해지고 커지게 되면 다음과 같은 문제가 발생할 수 있다.
+
+1. 애플리케이션 컨텍스트를 생성할 때 내부의 모든 빈을 초기화하기 때문에 성능이슈가 발생할 수 있다.
+2. 어떤 빈은 독자적으로 많은 리소스를 할당하거나 독립적 스레드를 사용하기 때문에, 계속 새로운 애플리케이션 컨텍스트 생성시 이슈가 발생할 수 있다.
+
+위의 문제를 해결하기 위해 테스트 컨텍스트를 생성할 수 있다.
+
+## 테스트를 위한 애플리케이션 컨텍스트 관리
+
+### 스프링 테스트 컨텍스트 프레임워크 적용
+~~~java
+@RunWith(SrpingJUnit4ClassRunner.class) // 스프링의 테스트 컨텍스트 프레임워크 확장기능
+@ContextConfiguration(locations="/applicationContext.xml") // 테스트 컨텍스트가 자동으로 만들어줄 애플리케이션 컨텍스트 위치 지정
+public class UserDaoTest {
+    @Autowired
+    private ApplicationContext context;
+    
+    @Before
+    public void setUp() {
+        this.dao = this.context.getBean("userDao", UserDao.class);
+    }
+}
+~~~
+
+@RunWith는 JUnit 프레임워크 테스트 실행 방법을 확장할 때 사용하는 애노테이션이다. 위의 코드에서는 SpringJUnit4ClassRunner라는 JUnit 용 테스트 컨텍스트 프레임워크 확장 클래스를 지정하여, JUnit이 테스트를 진행할 때 테스트가 사용할 애플리케이션 컨텍스트를 생성 / 관리하는 작업을 해 준다.
+@ContextConfiguration은 자동으로 만들어 줄 애플리케이션 컨텍스트 설정 파일 위치를 지정해주는 애노테이션이다.
+
+위와 같이 애플리케이션 컨텍스트를 생성하면, 같은 애노테이션이 붙은 테스트 클래스들 사이에서도 애플리케이션 컨텍스트를 공유할 수 있다.
+
+### 테스트 코드에 의한 DI
+애플리케이션 사용할 applicationContext.xml 에 정의된 DataSource 빈이 리얼 서비스를 바라보고 있다고 가정하자. 테스트할 때 이 DataSource 를 바라보고 데이터를 삭제하면 리얼 데이터가 모두 날아갈 것이다.
+이런 상황을 막기 위해, 애플리케이션 컨텍스트에서 가져온 컨텍스트의 빈을 변경하는 작업을 해 보자
+
+~~~java
+@DirtiesContext // 테스트 메소드에서 애플리케이션 컨텍스트 구성, 상태를 변경할 것이다.
+public class UserDaoText {
+    @Autowired
+    UserDao dao;
+    
+    @Before
+    public void setUp() {
+        DataSource dataSource = new SimpleConnectionDataSource("jdbc:mysql://localhost/testdb", "spring", "book", true);
+        dao.setDataSource(dataSource); // 코드에 의한 수동 DI
+    }
+}
+~~~
+
+위와 같이 작업할 때는 @DirtiesContext 애노테이션을 꼭 붙여 주어야 하는데, 그렇게 하지 않는다면 변경한 애플리케이션 컨텍스트를 테스트 클래스 전체에서 공유할 수 있기 때문이다.
+
+### 테스트를 위한 별도의 DI 설정
+아무래도 위의 방식은 직접 애플리케이션 컨텍스트를 변경하기 때문에 단점이 많다. 코드의 양도 증가하고 매번 새롭게 애플리케이션 컨텍스트를 만들어야 하기 때문이다.
+위의 방법보다 DataSource를 두 개 등록하는 방법을 활용하려고 한다.
+
+하나는 서버에서 운영용으로 사용하는 DataSource이고, 하나는 테스트에 적합하게 준비된 DB를 사용하는 DataSource 이다.
+
+다음 프로세스로 작업을 진행한다.
+
+1. 기존의 applicatonContext.xml을 복사하여 test-applicatonContext.xml 을 만든다.
+2. 다른 빈은 그대로 두고, dataSource 빈의 설정을 테스트용으로 변경해준다.
+3. @ContextConfiguration 애노테이션에 있는 locations 엘리먼트의 값을 test-applicationContext.xml로 변경해 준다.
+
+## 학습 테스트로 배우는 스프링
+때로는 자신이 만들지 않은 프레임워크나 다른 개발팀에서 제공한 라이브러리에 대해서도 테스트를 작성해야 한다. 이런 테스트를 학습 테스트라고 한다.
+
+학습 테스트의 장점은 다음과 같다.
+
+1. 다양한 조건에 따른 기능을 손쉽게 확인해 볼 수 있다.
+    - 자동화된 테스트 코드를 사용하여, 기능이 어떻게 동작하는지 빠르게 확인할 수 있다.
+2. 학습 테스트 코드를 개발 중에 참고할 수 있다.
+    - 다양한 기능과 조건에 대한 테스트 코드를 개별적으로 만들고 남겨둘 수 있다.
+3. 프레임워크나 제품을 업그레이드 할 때 호환성 검증을 도와준다.
+    - 주요 기능에 대한 학습 테스트를 충분히 작성해 두었다면, 업그레이드 후에도 해당 프레임워크나 제품이 정상적으로 동작할 것을 보장할 수 있다.
+4. 테스트 작성에 대한 좋은 훈련이 된다.
+5. 새로운 기술을 공부하는 과정이 즐거워진다.
+
+스프링 학습 테스트를 만들 때 참고할 수 있는 가장 좋은 소스는 스프링 자신에 대한 테스트 코드이다. 스프링은 거의 모든 기능에 대해 방대한 양의 테스트가 만들어져 있다. 스프링 테스트를 잘 살펴보면, 레퍼런스 문서에 미처 설명되지 않았던 중요한 정보도 많이 얻을 수 있고 테스트 작성 방법에 대한 좋은 팁 또한 얻을 수 있다.
