--- a/_drafts/2018-03-14-토비의 스프링 - 3장 템플릿.md
+++ b/_drafts/2018-03-14-토비의 스프링 - 3장 템플릿.md
@@ -194,7 +194,241 @@ public interface StatementStrategy {
 
 
 ~~~java
-public class DeleteAllStatement implements StatementStrategy 
+public class DeleteAllStatement implements StatementStrategy {
+    public PreparedStatement makePreparedStatement(Connection c) throws SQLException {
+        PreparedStatement ps = c.prepareStatement("delete from users");
+        return ps;
+    }
+}
 ~~~
 
+이제 확정된 전략인 DeleteAllStatement 가 생성되었다. 이것을 deleteAll 에서 사용한다면 그럴저럭 전략 패턴이 적용되었다 볼 수 있다.
+
+~~~java
+public void deleteAll() throws SQLException {
+    try {
+        c = dataSource.getConnection();
+
+        StatementStrategy strategy = new DeleteAllStatement();
+        ps = strategy.makePreparedStatement(c);
+
+        // implements
+    }
+}
+~~~
+
+그러나 전략 패턴의 장점은 필요에 따라 컨텍스트를 유지하면서(OCP 의 폐쇄 원칙) 전략을 바꿔 쓸 수 있는 것인데 (OCP 의 개방 원칙) 이렇게 컨텍스트 안에서 구체적인 전략 클래스인
+DeleteAllStatement 를 사용하도록 고정되어 있다면 뭔가 이상하다. 컨텍스트가 특정 구현 클래스인 DeleteAllStatement 를 알고 있다는 건, 전략 패턴에도 OCP 에도 들어맞는다고 볼 수 없기 때문이다.
+
+#### DI 적용을 위한 클라이언트/컨텍스트 분리
+
+전략 패턴에 따르면, Context 가 어떤 전략을 사용할 것인지는 Context 를 사용하는 Client 가 결정하는 것이 일반적이다. Client 가 구체적인 전략 중 하나를 선택하고 오브젝트로 만들어 Context 에 전달하는 것이다.
+Context 는 전달받은 전략 구현 클래스의 오브젝트를 사용한다. 즉 전략 패턴은 다음과 같은 조건이 충족되면 좋다.
+
+1. Client -> Context -> Strategy 의 구조를 따른다. 클라이언트는 Context 에게 전략을 제공하고, Context 는 Strategy 구현 클래스의 오브젝트를 사용한다.
+2. Strategy 는 Client 에 의해 Context 에 넘겨지는데, 이 때 인터페이스로 커뮤니케이션 한다.
+
+이제 이 전략을 코드에 적용해보자. 먼저 확인해야 할 사항은, 위의 코드에서 컨텍스트에 해당하는 JDBC try/catch/finally 코드를 클라이언트 코드인 StatementStrategy 를 만드는 곳으로부터 독립시켜야 한다.
+컨텍스트를 메소드로 분리하면 다음과 같이 된다.
+
+~~~java
+public void jdbcContextWithStatementStrategy(StatementStrategy stmt) throws SQLException {
+    Connection c = null;
+    PreparedStatement ps = null;
+
+    try {
+        c = dataSource.getConnection();
+
+        ps = stmt.makePreparedStatement(c);
+
+        ps.executeUpdate();
+    } catch (SQLException e) {
+        throw e;
+    } finally {
+        // close implement
+    }
+}
+~~~
+
+1. 클라이언트로부터 StatementStrategy 타입의 전략 오브젝트를 제공받는다.
+2. try / catch / finally 형태로 이루어진 컨텍스트 내에서 작업을 수행한다.
+3. 제공받은 전략 오브젝트는 PreparedStatement 생성이 필요한 시점에 호출하여 사용한다.
+
+이제 클라이언트의 해당하는 부분을 보자. 클라이언트는 다음과 같은 역할을 한다.
+
+1. 전략 오브젝트를 만든다.
+2. 컨텍스트를 호출한다.
+
+~~~java
+public void deleteAll() throws SQLException {
+    StatementStrategy st = new DeleteAllStatement(); // 선정한 전략 클래스 오브젝트 생성
+    jdbcContextWithStatementStrategy(st); // 컨텍스트를 호출하며 전략 오브젝트 전달
+}
+~~~
+
+이제 완벽한 전략 패턴의 모습을 갖추었다. 특히 클라이언트가 컨텍스트가 사용할 전략을 정해서 전달한다는 면에서, 위 구조는 DI 구조라고 이해할 수도 있다. DI 의 가장 중요한 개념은 제3자의 도움을 통해,
+두 오브젝트 사이의 유연한 관계가 설정되도록 만든다는 것이다.
+
+## JDBC 전략 패턴의 최적화
+지금까지 기존의 deleteAll() 메소드에 담겨 있던 변하지 않는 부분, 자주 변하는 부분을 전략 패턴을 사용하여 깔끔하게 분리했다.
+
+### 전략 클래스의 추가 정보
+이번에는 add() 메소드에도 적용해보자. 먼저 add() 메소드에서 변하는 부분인 PreparedStatement 를 만드는 코드를 addStatement 클래스로 옮겨 담는다.
+
+~~~java
+public class AddStatement implements StatementStrategy {
+    public PreparedStatement makePreparedStatement(Connection c) throws SQLException {
+        PreparedStatement ps = c.preparedStatement("insert into users(id, name, password) values(?,?,?)");
+
+        ps.setString(1, user.getId());  // user 가 없다!
+        ps.setString(2, user.getName());
+        ps.setString(3, user.getPassword());
+
+        return ps;
+    }
+}
+~~~
+
+이렇게 클래스를 분리하면 컴파일 에러가 난다, 왜냐하면 deleteAll() 과는 다르게 add() 에서는 user 라는 부가적인 정보가 필요하기 때문이다. 따라서, 클라이언트가 AddStatement 의 전략을 수행하려면
+부가정보인 user 를 제공해주어야 한다.
+
+클라이언트로부터 타입 오브젝트를 받을 수 있게 AddStatement 를 수정하자.
+
+~~~java
+public class AddStatement implements StatementStrategy {
+    User user;
+
+    public AddStatement(User user) {
+        this.user = user;
+    }
+}
+~~~
+
+위와 같은 코드를 추가하면 컴파일 에러를 막을 수 있다. 다시 한번 위의 구조를 떠올려보면, client 는 context 로 전략 구현체를 전달하고, context 는 전략을 실행하는 역할을 맡는다.
+전략 구현체에 user 정보가 추가되었으니, client 에서 전략 구현체를 생성 시에 user 정보를 세팅해주어야 한다.
+
+~~~java
+public void add(User user) throws SQLException {
+    StatementStrategy st = new AddStatement(user);
+    jdbcContextWithStatementStrategy(st);
+}
+~~~
+
+이렇게 하여, deleteAll 과 add 두 군대에서 모두 PreparedStatement 를 실행하는 JDBC try / catch / finally 컨텍스트를 공유하여 사용할 수 있게 되었다.
+
+### 전략과 클라이언트의 동거
+
+지금까지 해온 작업으로 문제점을 해결하고 코드를 깔끔하게 만들었지만, 아직 좀 더 개선할 수 있는 부분이 있다. 현재 구조에는 두 가지 단점이 있다.
+
+1. DAO 메소드마다 새로운 StatementStrategy 구현체를 생성해야 한다.
+    - 기존 UserDao 때보다 클래스 파일의 개수가 증가한다. 템플릿 메소드 패턴을 사용할 때보다 그다지 나을 게 없다.
+2. DAO 메소드에서 StatementStrategy 에 전달할 User 와 같은 부가적인 정보가 있는 경우, 오브젝트를 전달할 생성자와 저장해 둘 인스턴스 변수를 번거롭게 만들어야 한다.
+
+이 두 가지를 해결할 방법을 찾아보자.
+
+#### 로컬 클래스
+StatementStrategy 전략 클래스를 매번 독립된 파일로 만들지 말고, UserDao 클래스 안에 내부 클래스로 정의해버리면 클래스의 개수를 줄일 수 있다. DeleteAllStatement 나 AddStatement 는 UserDao 밖에서
+사용되지 않는다. 둘 다 UserDao 안에서 사용되고, 메소드 로직에 강결합되어 있다.
+
+위와 같은 특성을 가진 클래스라면, 로컬 클래스로 생성할 수 있다.
+
+~~~java
+public void add(User user) throws SQLException {
+    class AddStatement implements StatementStrategy {
+        User user;
+
+        public AddStatement(User user) {
+            this.user = user;
+        }
+
+        public PreparedStatement makePreparedStatement(Connection c) throws SQLException {
+            PreparedStatement ps = c.preparedStatement("insert into users(id, name, password) values(?,?,?)");
+
+            ps.setString(1, user.getId());
+            ps.setString(2, user.getName());
+            ps.setString(3, user.getPassword());
+
+            return ps;
+        }
+    }
+
+    StatementStrategy st = new AddStatement(user);
+    jdbcContextWithStatementStrategy(st);
+}
+~~~
+
+위와 같이 메소드 안에 선언한 로컬 클래스는 선언된 메소드 내에서만 사용할 수 있다. 또 한 가지 장점이 있는데, 로컬 클래스는 inner class 이기 때문에 자신이 선언된 곳의 정보에 접근할 수 있다는 점이다.
+AddStatement 는 User 정보를 필요로 한다. 따라서 원래는 생성자를 만들어 전달해 주었는데, add 메소드 내에 AddStatement 클래스를 선언하면 생성자로 User 정보를 전달해 줄 필요가 없다. 내부 메소드는 자신이 정의된
+메소드의 로컬 변수에 직접 접근할 수 있는데, 메소드 파라미터도 일종의 로컬 변수이기 때문이다. 다만 inner class 에서 외부의 변수를 사용할 때는 final 로 선언해주어야 한다.
+
+~~~java
+public void add(final User user) throws SQLException {
+    class AddStatement implements StatementStrategy {
+
+        public PreparedStatement makePreparedStatement(Connection c) throws SQLException {
+            PreparedStatement ps = c.preparedStatement("insert into users(id, name, password) values(?,?,?)");
+
+            ps.setString(1, user.getId());
+            ps.setString(2, user.getName());
+            ps.setString(3, user.getPassword());
+
+            return ps;
+        }
+    }
+
+    StatementStrategy st = new AddStatement(); // user 에 그냥 접근할 수 있기 때문에, 생성자에 정보를 넘겨줄 필요가 없다.
+    jdbcContextWithStatementStrategy(st);
+}
+~~~
+
+#### 익명 내부 클래스
+
+AddStatement 클래스는 add() 메소드 내에서 사용하기 위해 만들어졌다. 그러면, 클래스 이름도 제거할 수 있다. 자바에는 이름도 필요없는 익명 내부 클래스가 있기 때문이다.
+
+익명 내부 클래스는 이름을 갖지 않는 클래스고, 클래스 선언과 오브젝트가 결합된 형태로 만들어진다. 상속된 클래스나 구현할 인터페이스를 생성자 대신 사용하여 다음과 같인 형태로 만들어서 사용한다.
+
+~~~java
+new 인터페이스이름() { 클래스 본문 };
+~~~
+
+AddStatement 를 익명 내부 클래스로 만들어보자. 익명 내부 클래스는 다음과 같은 특징이 있다.
+
+1. 선언과 동시에 오브젝트를 생성한다.
+2. 이름이 없기 때문에 클래스 자신의 타입을 가질 수 없다.
+3. 구현한 인터페이스 타입의 변수에만 저장할 수 있다.
+
+~~~java
+public void add(User user) throws SQLException {
+
+    jdbcContextWithStatementStrategy(new StatementStrategy() {
+         public PreparedStatement makePreparedStatement(Connection c) throws SQLException {
+             PreparedStatement ps = c.preparedStatement("insert into users(id, name, password) values(?,?,?)");
+
+             ps.setString(1, user.getId());
+             ps.setString(2, user.getName());
+             ps.setString(3, user.getPassword());
+
+             return ps;
+         }
+     });
+}
+~~~
+
+어짜피 한번만 사용할 것이니 변수에 담을 필요도 없이 바로 생성할 수 있다. 마찬가지로 DeleteAllStatement 도 deleteAll() 메소드에서 익명 내부 클래스로 처리할 수 있다.
+
+~~~java
+public void deleteAll() throws SQLException {
+    jdbcContextWithStatementStrategy(
+        new StatementStrategy() {
+            public PreparedStatement makePreparedStatement(Connection c) throw SQLException {
+                return c.prepareStatement("delete from users");
+            }
+        }
+    );
+}
+~~~
+
+## 컨텍스트와 DI
+
+### JdbcContext 의 분리
 
