--- a/_drafts/2018-03-14-토비의 스프링 - 3장 템플릿.md
+++ b/_drafts/2018-03-14-토비의 스프링 - 3장 템플릿.md
@@ -431,4 +431,142 @@ public void deleteAll() throws SQLException {
 ## 컨텍스트와 DI
 
 ### JdbcContext 의 분리
+전략 패턴의 관점에서 보았을 때는, UserDao 의 메소드가 클라이언트고, 익명 내부 클래스로 만들어지는 것이 개별적인 전략이다.
+jdbcContextWithStatementStrategy() 메소드는 컨텍스트이다. 컨텍스트 메소드는 UserDao 내의 PreparedStatement 를 실행하는 기능을 가진 메소드에서 공유할 수 있다.
 
+그런데, jdbcContextWithStatementStrategy() 는 다른 DAO 에서도 사용 가능하다. 위의 메소드를 UserDao 내에서 분리시켜서 모든 DAO 가 사용할 수 있게 해 보자.
+
+#### 클래스 분리
+
+분리해서 만들 클래스의 이름은 JdbcContext 라고 하자. 다음과 같은 작업을 진행할 것이다.
+
+1. JdbcContext 에 UserDao 에 있던 컨텍스트 메소드를 workWithStatementStrategy() 라는 이름으로 옮긴다.
+2. DataSource 가 필요한 것이 UserDao 가 아니라, JdbcContext 가 되어 버리므로, DataSource 를 DI 받을 수 있게 수정한다.
+
+~~~java
+public class JdbcContext {
+    private DataSource dataSource;
+
+    public void setDataSource(DataSource dataSource) {
+        this.dataSource = dataSource;
+    }
+
+    public void workWithStatementStrategy(StatementStrategy stmt) throws SQLException {
+        Connection c = null;
+        PreparedStatement ps = null;
+
+        try {
+            c = this.dataSource.getConnection();
+
+            ps = stmt.makePreparedStatement(c);
+
+            ps.executeUpdate();
+        } catch(SQLException e) {
+            throw e;
+        } finally {
+            // implement
+        }
+    }
+}
+~~~
+
+그리고 JdbcContext 를 DI 받아서 사용할 수 있게 UserDao 를 수정한다.
+
+~~~java
+public class UserDao {
+    private JdbcContext jdbcContext;
+
+    // JdbcContext 를 DI 받게 수정한다.
+    public void setJdbcContext(JdbcContext jdbcContext) {
+        this.jdbcContext = jdbcContext;
+    }
+
+    public void add(final User user) throws SQLException {
+        this.jdbcContext.workWithStatementStrategy( // DI 받은 객체를 사용하게 수정
+            new StatementStrategy() {...}
+        );
+    }
+
+    public void deleteAll() throws SQLException {
+        this.jdbcContext.workWithStatementStrategy( // DI 받은 객체를 사용하게 수정
+            new StatementStrategy() {...}
+        );
+    }
+}
+~~~
+
+#### 빈 의존관계 변경
+이제 새롭게 작성된 오브젝트들의 의존관계를 살펴보고 이를 설정에 적용한다.
+
+1. UserDao 는 JdbcContext 에 의존하고 있다.
+    - 구현이 바뀔 가능성이 거의 없으므로, 두 객체는 인터페이스를 사이에 두지 않고 구현체를 바로 DI 하게 한다.
+2. JdbcContext 는 dataSource 를 의존한다.
+
+위의 설정에 맞추어 test-applicationContext.xml 을 수정해준다. 설정 xml 변경은 생략한다.
+
+### jdbcContext 의 특별한 DI
+UserDao 와  JdbcContext 사이에는 특별히 인터페이스를 적용하지 않고 DI 한다. 이를 인터페이스를 추출하여 DI 하는 방식으로 수정하면 좋지 않을까? 그렇게 해도 상관은 없지만
+꼭 그렇게 할 필요는 없다.
+
+스프링의 DI는 넓게 보자면 객체의 생성과 관계설정에 대한 제어권한을 오브젝트에서 제거하고 외부로 위임했다는 IoC라는 개념을 포괄한다. 그렇기 때문에 JdbcContext 를 스프링을 이용해 UserDao 객체에서
+사용하는 것은 DI 의 기본을 따르고 있다 볼 수 있다.
+
+인터페이스를 사용하여 클래스를 자유롭게 DI 할 수 있게 하지는 않았지만, DI 구조로 설계함으로써 다음과 같은 이득을 취할 수 있다.
+
+1. JdbcContext 가 스프링 컨테이너의 싱글톤 레지스트리에서 관리되는 싱글톤 빈이 된다.
+    - 여러 오브젝트에서 공유하여 사용할 수 있다.
+2. JdbcContext 가 DI 를 통해 다른 빈에 의존하고 있으므로, 이를 빈으로 등록하지 않으면 다른 빈을 주입받을 수 없다.
+
+인터페이스를 사용하지 않는다는 건, UserDao 와 JdbcContext 가 매우 긴밀한 관계를 맺고 있다는 의미이다. UserDao 가 JPA 나 하이버네이트 같은 ORM 을 사용해야 한다면 JdbcContext 는 통채로 변경되어야 한다.
+또한 테스트에서도 다른 구현으로 대체할 이유가 없다. 이런 경우는 굳이 인터페이스를 두지 말고 강결합 관계를 허용하고, 빈으로 등록하여 DI 되도록 만들어도 좋다.
+
+#### 코드를 이용하는 수동 DI
+스프링의 빈으로 등록하여 DI 하는 대신에, UserDao 내부에서 직접 DI 를 할 수도 있다. 이렇게 하면 DAO 마다 하나씩 객체가 생성되기 때문에, 대형 프로젝트라고 해도 수백 개 정도의 객체면 충분하다. 또한 초기 생성시에만
+한번 생성되기 때문에 GC 부담도 적다.
+
+빈으로 등록하지 않는다는 것은 스프링 컨테이너에서 생성되지 않는다는 뜻이므로, 생성과 초기화를 다른 클래스에서 책임져야 한다. UserDao 에서 생성하고 초기화하면 문제 없다.
+위에서 이야기했던 2번 문제는 남는다. JdbcContext 는 DataSource 를 DI 받기 때문에, 빈으로 등록하지 않는다면 DI 받을 수 없다. 그렇다고 DataSource 를 인터페이스를 거치지 않고 바로 주입하면 DataSource 를 동적으로 변경하지 못해
+문제가 발생할 수 있다. 이 문제는 UserDao 에서 직접 DataSource 까지 JdbcContext 에 DI 해주는 것으로 해결할 수 있다.
+
+정리하면 다음과 같다.
+
+1. UserDao 와 DataSource 를 빈으로 선언하고, UserDao 에 DataSource 를 DI 한다.
+2. UserDao 에서 DataSource 를 JdbcContext 에 수동 DI 한다.
+
+UserDao 코드는 다음과 같이 변한다.
+
+~~~java
+public class UserDao {
+
+    private DataSource dataSource;
+    private JdbcContext jdbcContext;
+
+    public void setDataSource(DataSource dataSource) {
+        this.jdbcContext = new JdbcDataSource();
+
+        this.jdbcContext.setDataSource(dataSource); // dataSource 를 주입한다.
+
+        this.dataSource = dataSource; // 아직 JdbcContext 를 적용하지 않은 메소드를 위해 저장해준다.
+    }
+}
+~~~
+
+setDataSource() 메소드는 컨테이너가 DI 작업을 수행할 때 호출된다. 이 메소드에서 JdbcContext 에 대해 수동 DI 작업을 수행하면 된다.
+
+이 방법의 장점은, 굳이 인터페이스를 두지 않아도 될 정도로 긴밀한 관계를 갖는 DAO 와 JdbcContext 를 빈으로 분리하지 않고 내부에서 직접 만들어 사용하면서, 다른 오브젝트에 대해 DI 가 가능하다는 것이다.
+
+## 템플릿과 콜백
+
+지금까지 UserDao 와 StatementStrategy, JdbcContext 를 이용해 만든 코드는 일종의 전략 패턴이 적용된 것이다. 복잡하지만 바뀌지 않는 일정한 패턴을 갖는 작업 흐름이 존재하고, 그 중 일부분을 자주 바꿔서
+사용하여야 할 때 적합한 구조이다. 전략 패턴의 기본 구조에 내부 익명 클래스를 활용한 방식이다. 이런 방식을 스프링에서는 **템플릿/콜백 패턴** 이라고 부른다.
+
+### 템플릿/콜백의 동작원리
+
+템플릿은 고정된 작업 흐름을 가진 코드를 사용할 수 있다는 의미에서 붙인 이름이다. 콜백은 템플릿 안에서 호출되는 것을 목적으로 만든 오브젝트를 말한다.
+
+#### 템플릿/콜백의 특징
+여러 개의 메소드를 가진 일반적인 인터페이스를 사용할 수 있는 전략 패턴의 전략과 달리 템플릿/콜백 패턴의 콜백은 보통 단일 메소드 인터페이스를 사용한다. 템플릿의 작업 흐름 중 특정 기능을 위해 한번 호출되는 것이
+일반적이기 때문이다. 하나의 템플릿에서 여러 종류의 전략을 사용해야 한다면 하나 이상의 콜백 오브젝트를 사용할 수 있다. 콜백은 일반적으로 하나의 메소드를 가진 인터페이스를 구현한 익명 내부 클래스로 만들어진다고 보면 된다.
+
+#### JdbcContext 에 적용된 템플릿/콜백
+앞에서 만든 UserDao, JdbcContext 와 StatementStrategy 의 코드에 적용된 템플릿/콜백
