--- a/_drafts/2018-08-02-[자바 병렬 프로그래밍] 객체 공유.md
+++ b/_drafts/2018-08-02-[자바 병렬 프로그래밍] 객체 공유.md
@@ -143,4 +143,203 @@ volatile 이와 같은 상황에만 사용하면 좋다.
 - private 가 아닌 메소드에서 호출한 메소드가 내부에서 생성한 객체를 리턴한다.
 - 다른 클래스의 메소드로 객체를 넘겨준다.
 
-위와 같은 상황이 발생하면, 객체가 공개되었다고 할 수 있다.  
+위와 같은 상황이 발생하면, 객체가 공개되었다고 할 수 있다. 이와 같은 경우에, 의도적으로 객체를 공개하지는 않았지만 외부에서 사용할 수 있게 공개되었을 수 있다.
+이 경우에는 누출(escaped) 되었다고 한다.
+
+다음 예제를 확인해 보자
+
+~~~java
+class UnsafeStats {
+	private String[] states = new String[] {"AK", "AL"};
+	
+	public String[] getStates() {
+		return states;
+	}
+}
+~~~   
+
+private 으로 변수를 숨겼지만, getStates 를 통해 숨겨진 변수의 값을 직접적으로 변경할 수 있다. 즉, 객체를 공개했을 때 그 객체 내부의 private 이 아닌 변수나 메소드를 통해 불러올 수 있는 모든 객체는 함께 공개된다.
+
+다른 스레드에서 공개된 객체를 사용해 실제로 작업을 하지 않기 때문에, 별 문제가 아니라고 생각할 수도 있다. 그러나, 어떤 객체건 일단 유출되고 나면 다른 스레드가 유출된 클래스를 의도적이건 의도적이지 않건 간에 반드시 잘못 사용할 수 있다고 가정하여야 한다.
+
+객체 내부의 값이 공개되는 다른 케이스는 내부 클래스의 인스턴스를 외부에 공개하는 경우이다. 내부 클래스의 인스턴스는 부모 클래스에 대한 참조를 갖고 있기 때문에, 부모 클래스도 함께 외부로 공개된다.
+
+### 생성 메소드 안정성
+
+생성 메소드를 실행하는 과정에 this 변수에 외부로 노출될 수도 있다. 일반적으로 생성 메소드가 완전히 종료된 다음에 객체의 상태가 개발자가 예상한 대로 초기화되기 때문에, 생성 메소드가 실행되는 동안 해당 객체가 외부에 공개된다면, 정상적이지 않은 상태의 객체가 외부로 공개될 수 있다.
+
+> 생성 메소드를 실행하는 도중에는 this 변수가 외부에 유출되지 않게 해야 한다.
+
+위의 케이스에 대해, 가장 흔하게 저지르는 실수는 생성 메소드에서 스레드를 새로 만들에 시작시키는 것이다. 필요한 기능이 있다면 생성 메소드에서 스레드를 생성하는 것은 별 문제가 아니지만, 스레드를 생성과 동시에 시작시키는 것은 문제가 될 수 있다.
+
+스레드를 바로 시작하면 그 스레드가 생성중인 객체의 외부 변수를 자유롭게 참조할 수 있기 때문이다. 스레드를 생성한다면, 바로 시작하기보다는 스레드를 시작하는 기능을 start 나 initialize 등의 메소드로 만들어 사용하는 편이 좋다.
+새로 작성하는 클래스의 생성 메소드에서 이벤트 리스너를 등록하거나, 새로운 스레드를 시작하려면 다음과 같이 하는 편이 좋다. 디폴트 생성자를 private 으로 선언하고, 펙토리 메서드를 생성하여 사용하는 것이다.
+
+~~~java
+public class SafeListener {
+	private final EventListener listener;
+	
+	private SafeListener() {
+		listener = new EventListener() {
+			public void onEvent(Event e) {
+				doSomething(e);
+			}
+		};
+	}
+	
+	public static SafeListener newInstance(EventSource source) {
+		SafeListener safe = new SafeListener();
+		source.registerListener (safe.listener);
+		return safe;
+	}
+}
+~~~
+
+이와 같이 작업하면 this 객체가 외부로 노출될 일이 없다.
+
+## 스레드 한정
+
+변경 가능한 객체를 공유하여 사용하는 경우에는 항상 동기화하여야 한다. 만약, 동기화하지 않아야 한다면 객체를 공유하여 사용하지 않을 수 밖에 없다.
+다만 꼭 객체를 공유하여야 한다면 객체의 사용 범위를 한정(confine) 하는 방법이 있다. 특정 객체를 단일 스레드에서만 활용한다고 확신할 수 있다면, 해당 객체는 따로 동기화 할 필요가 없다.
+
+예를 들면, 스윙에서는 이벤트 처리 스레드에 컴포넌트와 모델을 한정시켜, 스레드 안정성을 확보하고 있다. 또한 JDBC 에서도 같은 방법을 사용하고 있다.
+
+JDBC 표준에 따르면 Connection 객체가 반드시 스레드 안정성을 확보하고 있어야 하는건 아니다. 일반적으로, 커넥션 풀에서 DB 커넥션을 가져와서 요청 하나를 처리한 다음에 다시 커넥션을 반환하는 과정을 거친다. 
+서블릿 요청이나 EJB 요청은 대부분 단일 스레드에서 처리되기 때문에, 한 번에 다수의 스레드가 하나의 커넥션을 참조하지 못하도록 한정할 수 있다.
+
+### 스레드 한정 - 주먹구구식
+
+스레드 한정 기법을 구현 단계에서 알아서 잘 처리해야 할 경우가 있을 수 있다. 만일 이런 경우에, 특정 스레드에 한정하려는 객체가 volatile 로 선언되어 있다면 변경 작업은 특정 스레드 한 곳에서만 할 수 있게 하고, 나머지는 읽기 작업만 가능하게 하여 스레드 한정을 구현할 수 있다. 
+
+이는 임시방편이니 가능하면 좀 더 안전한 스레드 한정 기법을 사용하자
+
+## 스택 한정
+
+스택 한정은 특정 객체를 코러 변수를 통해서만 사용할 수 있는, 특별한 경우의 스레드 한정 기법이다. 변수를 클래스 내부에 숨겨두면 상태 관리에 용이하고, 특정 스레드에 한정하기 쉽다.
+로컬 변수는 이 두 가지를 모두 충족하는데, 현재 실행중인 스레드 내부의 스택에서만 존재하기 때문이다.
+
+다음 예제를 보자
+
+~~~java
+public int loadTheArk(Collection<Animal> candidates) {
+	SortedSet<Animal> animals;
+	int numPairs = 0;
+	Animal candidate = null;
+	
+	// animal 변수는 메소드 한정이며, 유출되어서는 안된다.
+	animals = new TreeSet<Animal>(new SpeciesGenderComparator());
+	animals.addAll(candidates);
+	
+	for (Aniaml a : animals) {
+	    if (candidates == null || !candidate.isPotentialMate(a)) {
+	    	candidate = a;
+	    }	else {
+	    	ark.load(new AnimalPair(candidate, a));
+	    	++numPair;
+	    	candidate == null;
+	    }
+	}
+	
+	return numBairs;
+}
+~~~ 
+
+TreeSet 클래스의 인스턴스를 만든 후, animals 에 보관한다. 그러면 TreeSet 인스턴스에 대한 참조가 정확하게 하나만 존재하고 로컬 변수에 보관하고 있기 때문에 현재 실행중인 스레드의 스택에 안전하게 보관된다. 그러나 animals 에 대한 참조를 외부에 공개한다면, 스택 한정 상태가 깨지게 되니 주의하여야 한다.
+
+### ThreadLocal
+
+스레드 내부의 값과 객체를 연결해 스레드 한정 기법을 사용할 수 있도록 도와주는 방법으로 ThreadLocal 이 있다. ThreadLocal 클래스에는 get 과 set 이 있는데, 호출하는 클래스마다 각기 다른 값을 사용하도록 관리해준다.
+
+스레드로컬 변수는 변경 가능한 싱글턴이나 전역 변수 등을 기반으로 설계되어 있는 구조에서 변수가 임의로 공유되는 상황을 막기 위해 사용하는 경우가 많다. 예를 들어, 단일스레드로 동작하는 애플리케이션에서 데이터베이스에 접속할 때 매번 Connection 인스턴스를 만들어내는 부담을 줄이고자 프로그램 시작 시점에 Connection 인스턴스를 하나 만들어 계속해서 사용한다고 가정해보자.
+ 
+이 객체를 전역 변수로 만들어 사용하면 변수를 동기화하여야 한다. 그러나, Connection 인스턴스를 저장할 때 ThreadLocal 을 사용하면 스레드는 저마다 각자의 연결 객체를 갖게 된다.
+
+~~~java
+private static ThreadLocal<Connection> connectionHolader = new ThreadLocal<Connection>() {
+	public Connection initialValue() {
+		return DriverManager.getConnection(DB_URL);
+	}
+};
+
+public static Connection getConnection() {
+	return connectionHolder.get();
+}
+~~~ 
+
+이런 방법은 자주 호출되는 메소드에서 임시로 사용할 객체를 새로 생성하는 대신, 이미 만들어진 객체를 재활용할 때 많이 사용한다. 개념적으로 본다면, ThreadLocal<T> 클래스는 Map<Thread, T> 라는 자료 구조로 구성되어 있고, Map<Thread, T> 에 스레드별 값을 보관한다고 생각할 수 있다. 물론 이렇게 구현되어 있다는 건 아니고, 스레드별 값은 실제로는 Thread 객체 자체에 저장되어 있고 스레드가 종료되면 스레드별 값으로 할당되어 있는 부분도 GC 가 처리한다.
+
+ThreadLocal 은 애플리케이션 프레임워크를 구현할 때 많이 사용된다. 예를 들면, J2EE 컨테이너는 EJB 를 사용하는 동안 해당 스레드와 트랜잭션 컨텍스트를 연결해 관리한다. 이 때, static 으로 선언된 ThreadLocal 에 트랜젝션 컨텍스트를 넣어두면 편리하다.
+
+이렇게 편리하긴 하지만, 전역 변수가 아니면서도 전역 변수처럼 동작하기 때문에, 프로그램의 구조가 허약해 질 수 있다. 또한 스레드마다 각기 값을 할당하는 것이기 때문에, 스레드 풀에서 스레드를 가져와 사용하는 경우에는 사용이 끝나면 해당 값을 삭제해주어야 한다.
+
+## 불변성
+
+지금까지 발생한 문제와 해결책들은 객체의 상태가 변한다는 가정 하에 생긴 문제들이다. 그런데 만약 객체의 상태가 변하지 않는다고 가정하면 어떨까? 지금까지 발생했던 문제들이 일순간에 사라진다.
+
+> 불변 객체는 언제라도 스레드에 안전하다.
+
+불변 객체는 다음 조건을 만족하여야 한다.
+
+> 생성되고 난 이후에는 객체의 상태를 변경할 수 없다
+> 내부의 모든 변수는 final 로 설정돼야 한다.
+> 적절한 방법으로 생성돼야 한다(예를 들어 this 변수에 대한 참조가 외부로 유출되지 않아야 한다).
+
+실행 중인 프로그램은 상태가 계속 변경되어야 하기 때문에, 불변 객체가 쓸모가 있을지에 대한 의문이 생길 수 있다. 그러나, 불변 객체는 쓰임새가 참으로 다양하다. 객체가 불변이라는 것과 참조가 불변이라는 것은 구분하여 생각해야 한다.
+
+에를 들어 사용하는 데이터가 불변 객체에 들어있다고 해도, 해당 객체를 레퍼런스하는 변수에 다른 불변 객체를 생성하여 대입하는 방법으로 데이터를 변경할 수 있다.
+
+### final 변수
+
+final 변수는 불변 객체를 생성할 때도 도움을 준다. final 을 지정한 변수의 값은 변경할 수 없다. 즉 불변객체가 되는데, 이를 volatile 키워드와 결합하여 사용함으로서 불변 객체를 안전하게 공개할 수 있다. 다음 코드를 보자
+
+~~~java
+@Immutable
+class OneValueCache {
+	private final BigInteger lastNumber;
+	private final BigInteger[] lastFactors; // 캐시 
+	
+	public OneValueCache(BigInteger i, BigInteger [] factors) {
+		lastNumber = i;
+		lastFactors = Arrays.copyOf(factors, factors.length); // 새로운 객체를 생성한다.
+	}
+	
+	// 새 객체를 생성하여 반환한다.
+	public BigInteger[] getFactors(BigInteger i) {
+		if (lastNumber == null || !lastNumber.equals(i)) {
+			return null;
+		} else {
+			return Arrays.copyOf(lastFactors, lastFactors.length);
+		}
+	}
+}
+~~~
+
+이는 인수분해를 하는 서블릿에서 사용할 클래스이다. 인수분해를 할 때 퍼포먼스를 높이기 위해 이전의 값을 cache 해 두도록 구현되어 있다. 이 경우 단일 연산으로 처리해야 하는 작업이 두 가지가 된다.
+
+하나는 캐시 값을 보관하는 것이고, 다른 하나는 캐시된 값이 요청한 값에 해당하는 경우 캐시값을 읽어오는 작업이다. 만약 여리 개의 값이 단일하게 한꺼번에 움직여야 한다면, 위의 코드처럼 동일하게 움직여야 하는 한대 묶는 불변 객체를 만들어 사용하는 것이 좋다. 
+불변 객체에 해당하는 값을 모두 모아두면 경쟁 조건을 방지할 수 있고, 변수 값을 변경하면 새로운 변수를 생성하기 때문에 다른 스레드는 아무런 이상 없이 동작한다.
+
+이제 위의 클래스를 사용하여 인수분해 서블릿을 구현해 보자
+
+~~~java
+@ThreadSafe
+public class VolatileCachedFactorizer implements Servlet {
+	private volatile OneValueCache cache = new OneValueCache(null, null);
+	
+	public void service(ServletRequest req, ServletResponse resp) {
+		BigInteger i = extractFromRequest(req);
+		BigInteger[] factors = cache.getFactors(i);
+		
+		if(factors == null) {
+			factors = factor(i);
+			cache = new OneValueCache(i, factors);
+		}
+		
+		encodeIntoResponse(resp, factors);
+	}
+}
+~~~
+
+OneValueCache 클래스가 불변인데다가, VolatileCachedFactorizer 클래스는 volatile 키워드를 사용하였으므로 시간적으로 가시성을 확보하였기 때문에 스레드 안전하다.
+
+## 안전 공개
