--- a/_posts/2016-03-09-옵저버 디자인 패턴.md
+++ b/_posts/2016-03-09-옵저버 디자인 패턴.md
@@ -18,7 +18,7 @@ category:
 - 현재 기상 조건을 보여주는 디스플레이
 
 이하 세 가지 요소로 이루어져 있다.
-습도센서, 온도센서, 압력센서를 통해 기상 스테이션으로 정보가 축적되고, 기상 스테이션으로부터 WeatherData가 데이터를 가져오고, 그 데이터를 디스플레이 장비가 하면에 표시한다.
+습도센서, 온도센서, 압력센서를 통해 기상 스테이션으로 정보가 축적된다. 정보가 축적된 기상 스테이션으로부터 WeatherData 가 데이터를 가져오고, 그 데이터를 디스플레이 장비가 하면에 표시한다.
 
 WeatherData 객체를 사용하여 현재 조건, 기상 통계, 기상 예측 이렇게 세 항목을 디스플레이 장비에서 데이터를 갱신하면서 보여주어야 한다.
 
@@ -30,7 +30,7 @@ class WeatherData {
 	getHumidity()  // 측정된 습도
 	getPressure() // 측정된 기압
 	public void measurementsChanged() {
-		// 우리가 구현해야 할 부분. 기상 관측값이 갱신될 때마다 화면에게 데이터를 전달해주어야 			한다.
+		// 우리가 구현해야 할 부분. 기상 관측값이 갱신될 때마다 화면에게 데이터를 전달해주어야 한다.
 	}
 }
 ~~~
@@ -43,7 +43,7 @@ class WeatherData {
 
 ## 이렇게 한번 해볼까?
 
-~~~ java
+~~~java
 public class WeatherData {
 	public void measurementsChanged() {
 			float temp = getTemperature();
@@ -61,139 +61,266 @@ public class WeatherData {
 
 ## 그렇다면 옵저버 패턴이란?
 - subject 객체가 데이터를 관리한다. 
-- subject의 데이터가 달라지면 옵저버에게 그 소식이 전해진다. 
-- 옵저버 객체는 subject객체를 구독하고 있으며, subject의 데이터가 바뀌게 되면 갱신 내용을 전달받게 된다.
+- subject 객체에서 옵저버 객체에게 전달할 데이터가 생기면, 옵저버 객체에게 그 데이터를 전달한다. 
+- 옵저버 객체는 subject 객체를 구독하고 있으며, subject 의 데이터가 바뀌게 되면 갱신 내용을 전달받게 된다.
 
 즉 옵저버 패턴이란 다음과 같다.
 
 **옵저버 패턴에서는 한 객체의 상태가 바뀌면 그 객체에 의존하는 다른 객체들에게 연락이 가고, 자동으로 내용이 갱신되는 방식으로 일대 다(one-to-many)의존성을 정의한다.**
 
+이는 다음과 같은 장점이 생긴다.
+
+1. subject 가 옵저버에 대해 아는 것은, 옵저버가 특정 인터페이스를 구현한다는 것 뿐이다. 따라서 두 객체 사이의 Loose coupling 이 생긴다.
+2. 옵저버는 얼마든지 새로 추가할 수 있다. 옵저버 인터페이스를 구현한 모든 객체는 옵저버로 추가할 수 있다.
+3. 새로운 형식에 옵저버를 추가하려면, 새로운 클래스에서 옵저버 인터페이스를 구현한 후에 subject 객체에 추가하면 된다.
+4. subject 와 옵저버는 서로 독립적으로 재사용할 수 있고, 내부적으로 변경이 발생한다고 해도 서로 영향을 미치지 않는다.
+
+위의 장점을 취할 수 있는 이유는, 두 객체가 Loose coupling 로 이어져있기 때문이다. 이 지점에서 다음과 같은 디자인 원칙을 추출할 수 있다.
+
+> 서로 상호작용을 하는 객체 사이에서는 가능하면 느슨하게 결합하는 디자인을 사용해야 한다.
+
 ## 구체적인 코드로는?
 
-~~~ java
-interface Subject {
-	registerObserver();
-	removeObserver();
-	notifyObservers();
-}
+먼저 인터페이스를 정의한다. Subject 인터페이스는 옵저버들을 관리하고 데이터에 변경이 생겼을 때 각각 옵저버에게 notify 를 하는 객체가 구현한다.
 
-class ConcreteSubject implements Subject {
-	registerObserver() {
-		// 구현체
-	}
-	removeObserver() {
-		// 구현체
-	}
-	notifyObservers() {
-		// 구현체
-	}
-	// subject 클래스는 상태를 설정하고 알아내기 위한 세터, 개터 메소드가 존재할수도 있다.
-	getState() 
-	setState()
-}
-
-interface Observer {
-	update()
-}
-
-class ConcreteObserver implements Observer {
-	update() {
-		// 옵저버가 데이터를 전송받는 메서드
-	}
-}
-
-~~~
-
-## 이와 같은 구조의 장점은?
-- subject와 observer는 느슨한 결합(Loose Coupling)이다. subject가 옵저버에 대해 아는 것은 한 가지 밖에 없다 : 옵저버들은 Observer 인터페이스를 구현하고 있다는 것. 즉 옵저버의 구상 클래스가 무엇인지, 옵저버가 무엇을 하는지에 대해서 알 필요가 없다.
-
-- 옵저버는 언제든지 새로 추가될 수 있다. subject는 Observer 인터페이스를 구현하는 객체의 목록만 디펜전시하고 있기 때문에, 언제든지 새로운 옵저버를 추가할 수 있다. 마찬가지로 언제든지 옵저버를 제거할 수 있다.
-
-- Subject에 어떠한 코드도 추가하지 않고 옵저버를 추가할 수 있다.
-- Subject와 Observer는 서로 독립적으로 재사용할 수 있다.
-- Subject나 Observer가 바뀌더라도 서로에게 영향을 미치지 않는다.
-
-여기서 디자인 패턴의 원칙 중 한 가지를 발견할 수 있다.
-
-**서로 상호작용을 하는 개체 사이에서는 가능하면 느슨하게 결합하는 디자인을 사용해야 한다.**
-
-객체끼리 서로 잘 모른다. Loose Coupling 전략을 취하는 것은 이와 같은 이점이 있다.
-
-## 실제 코드로 나타내보자
-
-~~~ java
+~~~java
 public interface Subject {
-	public void registerObserver(Observer o);
-	public void removeObserver(Observer o);
-	public void notifyObservers();
+	void registerObserver(Observer o);
+	void removeObserver(Observer o);
+	void notifyObservers(); // Subject 의 상태가 변경된 후, 모든 옵저버들에게 알리기 위해 호출하는 메서드
 }
 
 public interface Observer {
-	public void update(float temp, float humidity, float pressure);
+    void update(float temp, float humidity, float pressure); // 이 파라미터들은 기상 정보가 변경되었을 때 옵저버들에게 전달되는 상태값
 }
 
 public interface DisplayElement {
-	public void display();
+    void display(); // 디스플레이 항목을 화면에 표시해야 하는 경우에 이 메서드를 호출한다.
 }
 ~~~
-이와 같은 인터페이스를 구성하고
 
-~~~ java
+## WeatherData 에서 Subject interface 구현하기
+
+이제 WeatherData 클래스에서 subject 인터페이스를 구현한다. 
+
+~~~java
+/**
+* 이 클래스는 이 포스팅의 맨 처음에서 설명한 WeatherData 를 구현하였다.
+* WeatherData 는 Subject 를 구현하였고, 내부에 Observer 목록을 가지고 있다가, 데이터의 변동이 생기면 해당 observer 들에게 알린다.
+*/
 public class WeatherData implements Subject {
-	private List<Observer> observers;
-	private float temperature;
-	private float humidity;
-	private float pressure;
-	
-	public WeatherData() {
-		observers = new ArrayList<Observer>();
-	}
-	
-	public void registerObserver(Observer o) {
-		observers.add(o);
-	}
-	
-	public void removeObserver(Observer o) {
-		int i = observers.indexOf(o);
-		if(i >= 0) {
-			observers.remove(i);
-		}
-	}
-	
-	public void notifyObservers() {
-		for(int i = 0; i<observers.length; i++) {
-			observers.get(i).update(temperature, humidity, pressure);
-		}
-	}
-	
-	public void measurementsChanged() {
-		notifyObservers();
-	}
-	
-	public void setMeasurements(float temp, float humi, float pressure) {
-		this.temperature = temp;
-		this.humidity = humi;
-		this.pressure = pressure;
-		measurementsChanged();
-	}
+    private List<Observer> observers;
+    private float temperature;
+    private float humidity;
+    private float pressure;
+    
+    public WeatherData() {
+        observers = new ArrayList<>();
+    }
+    
+    public void registerObserver(Observer o) {
+        observers.add(o);
+    }
+    
+    public void removeObserver(Observer o) {
+        observers.remove(o);
+    }
+    
+    public void notifyObservers() {
+        for(Observer each : observers) {
+            each.update(temperature, humidity, pressure);
+        }
+    }
+    
+    public void measurementsChanged() {
+        notifyObservers();
+    }
+    
+    public void setMeasurements(float temperature, float humidity, float pressure) {
+        this.temperature = temperature;
+        this.humidity = humidity;
+        this.pressure = pressure;
+        measurementsChanged();
+    }
 }
 ~~~
 
-이와 같이 옵저버는 옵저버 인터페이스를 구현하고, 서브젝트는 서브젝트 인터페이스를 구현하고 서브젝트는 자신을 구독하는 옵저버의 리스트를 인스턴스 변수로 가지는 형태로 구현될 것이다.
+## 디스플레이 항목 구현
 
-옵저버를 구현하는 화면 객체는 Observer의 update() 함수를 내부에서 구현해야 할 것이다.
+이제 데이터가 변경되면, 변경된 데이터를 받는 디스플레이 클래스를 구현해보자. 요구사항은 다음 세 가지 디스플레이를 구현하는 것이다.
+
+- 현재 기상 조건을 표시하는 디스플레이
+- 기상 통계를 표시하는 디스플레이
+- 기상 예보를 표시하는 디스플레이
+
+~~~java
+public class CurrentConditionsDisplay implements Observer, DisplayElemnt {
+    private float temperature;
+    private float humidity;
+    private Subject weatherData; // 이 객체는 당장 사용할 일이 없지만 저장해 둔다. 만약에 observer 에서 탈퇴할 일이 생긴다면 유용하게 활용할 수 있다.
+    
+    // 생성자에 subject 객체를 전달하고, 그 객체를 사용하여 디스플레이를 옵저버로 등록한다.
+    public CurrentConditionsDisplay(Subject weatherData) { 
+        this.weatherData = weatherData;
+        weatherData.registerObserver(this);
+    }
+    
+    public void update(float temperature, float humidity, float pressure) {
+        this.temperature = temperature;
+        this.humidity = humidity;
+        dispaly();
+    }
+    
+    public void display() {
+        // 최근에 얻은 기온과 습도를 출력한다.
+        System.out.println("Current conditions : " + temperature + "F degrees and " + humidity + "% humidity");
+    }
+}
+~~~
+
+## 기상 스테이션 구현
+
+지금까지 만든 것들을 연동시켜 줄 코드를 만들면 된다. 일단은 이렇게 구현하도록 한다.
+
+~~~java
+public class WeatherStation {
+    public static void main(String [] args) {
+        WeatherData weatherData = new weatherData(); // observer 생성
+        
+        CurrentConditionsDisplay currentDisplay = new CurrentConditionsDisplay(weatherData);
+        
+        // 새로운 기상 측정값이 들어온것처럼 만든다.
+        weatherData.setMeasurements(80, 65, 30.4f);
+        weatherData.setMeasurements(82, 70, 29.2f);
+        weatherData.setMeasurements(78, 90, 29.2f);
+    }
+}
+~~~
 
 ## 자바 자체적으로 지원하는 객체
-옵저버 객체는 자바 내에서도 자체적으로 지원하고 있다. java.util 패키지 안에 Observer 인터페이스와 Obserable 클래스가 있다. 또한 이걸 사용하면, 푸시 방식으로도 갱신할 수 있고 풀 방식으로도 갱신이 가능하다.
 
-Observable 클래스는 위의 Subject와 같은 역할을 하고, Observer인터페이스는 위의 옵저버 인터페이스와 같은 역할을 한다.
+지금까지는 우리가 직접 만든 코드로 옵저버 패턴을 구현하였다. 그러나, 자바에서 몇 가지 API 를 통하여 자체적으로 옵저버 패턴을 지원하기도 한다.
 
-Subject 객체는 인터페이스를 구현하는 대신에 Observable 클래스를 상속받아서 작업을 진행하면 된다. 자신을 구독하는 객체들에게 연락을 할 때는
+가장 일반적으로 java.util 패키지에 들어있는 Observer 인터페이스와 Observable 클래스를 들 수 있다. 또한 이걸 사용하면, 푸시 방식으로도 갱신할 수 있고 풀 방식으로도 갱신이 가능하다.
+즉, Observable 클래스는 위의 Subject 와 같은 역할을 하고, Observer 인터페이스는 위의 옵저버 인터페이스와 같은 역할을 한다.
 
-1) setChanged() 메소드를 호출하여 상태가 변경되었음을 알린다.
-2) notifyObservers() 혹은 notifyObservers(Object arg) 중 하나를 호출한다. 파라미터로 넘어가는 값은, 구독하는 객체들에게 전달할 값이다.
+만약에 자바 자체적으로 지원하는 객체를 사용하고 싶다면, 다음과 같이 코드를 변경해준다.
 
-연락을 받는 객체들은 update(Observable o, Object arg) 를 구현한다. 서브젝트 객체와 notify를 할 때 전달한 값이 파라미터로 넘어오게 된다.
+### 객체가 옵저버가 되는 방법
+1. Observer 인터페이스를 구현하고, Observable 객체의 addObserver() 메소드를 호출하여 subject 클래스에서 옵저버를 등록한다.
+2. 옵저버 목록에서 탈퇴하고 싶다면, deleteObserver() 를 호출한다.
+
+### Observable 에서 연락을 돌리는 방법
+1. Observable 수퍼클래스를 확장하여, Observable 클래스를 만든다.
+2. setChanged() 를 호출하여, 객체의 상태가 변경되었음을 알린다.
+3. 그 다음으로는 다음 중 하나의 메소드를 호출해야 한다.
+    - notifyObservers()
+    - notifyObservers(Object arg) // 연락할 때 각 옵저버 객체에게 전달할 임의의 데이터 객체를 파라미터로 받는다.
+    
+### 옵저버가 연락을 받는 방법
+
+update() 메서드를 구현한다. 다시 말하면, update(Observable o, Object arg) 형태의 메서드를 호출한다.
+
+
+## 구현한 객체와의 차이점
+
+setChanged() 메소드를 먼저 호출한다는 점이 다르다. setChanged() 가 호출되지 않은 상태에는 notify 를 해도 옵저버에게 아무 연락도 가지 않는다.
+코드로 확인하면 다음과 같을 것이다.
+
+~~~java
+setChanged() {
+    changed = true;
+}
+
+notifyObservers(Object arg) {
+    if(changed) {
+        for(Observer each : observers) {
+            each.update(this, arg);
+        }
+    }
+    
+    changed = false;
+}
+
+notifyObservers() {
+    notifyObservers(null);
+}
+~~~
+ 
+이와 같은 flag 를 두면 어떤 이득이 있을까? 만약에 기상 값이 굉장히 예민해서, 0.1 도 단위로 쉴세없이 변경된다고 가정해보자. 
+이와 같은 상황에서 0.5 도씩 변경될때마다 옵저버들에게 알리고 싶다면, setChanged 를 조건에 따라 호출함으로서 원하는 바를 달성할 수 있다.
+
+## 자바 내장 기능을 활용한 기상 스테이션
+
+### Observable
+
+~~~java
+/**
+* 이 클래스는 자바 내장 객체를 사용하여 WeatherData 를 구현한다. 
+*/
+public class WeatherData extends Observable {
+    private float temperature;
+    private float humidity;
+    private float pressure;
+    
+    public WeatherData() { }
+    
+    public void measurementsChanged() {
+        setChanged();
+        notifyObservers();
+    }
+    
+    public void setMeasurements(float temperature, float humidity, float pressure) {
+        this.temperature = temperature;
+        this.humidity = humidity;
+        this.pressure = pressure;
+        measurementsChanged();
+    }
+    
+    public float getHumidity() {
+        return humidity;
+    }
+    
+    public float getTemperature() {
+        return temperature;
+    }
+    
+    public float getPressure() {
+        return pressure;
+    }
+}
+~~~
+
+### Observer
+
+~~~java
+public class CurrentConditionsDisplay implements Observer, DisplayElemnt { // java.util 패키지에 있는 Observer 를 구현한다.
+    Observable observable;
+    private float temperature;
+    private float humidity;
+    
+    public CurrentConditionsDisplay(Observable observable) { 
+        this.observable = observable;
+        observable.addObserver(this);
+    }
+    
+    public void update(Observable obs, Object arg) { // Observable 과 추가 파라미터를 둘 다 받는다. 
+        if(obs instanceof WeatherData) {
+            WeatherData weatherData = (WeatherData)obs;
+            this.temperature = weatherData.getTemperature();
+            this.humidity = weatherData.getHumidity();
+            display();
+        }        
+    }
+    
+    public void display() {
+        // 최근에 얻은 기온과 습도를 출력한다.
+        System.out.println("Current conditions : " + temperature + "F degrees and " + humidity + "% humidity");
+    }
+}
+~~~
+
+
 
 
 
